Acrescentando dados dos episódios.